[project]
name = "mmhanima"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffsynth",
    "torch>=2.11.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/xpu"

[tool.uv.sources]
diffsynth = { git = "https://github.com/modelscope/DiffSynth-Studio.git" }
